Creating draft PR with potential fix